adiciona pagina options

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -24,6 +24,10 @@
     Listar dados
     <ion-icon name="list-box"></ion-icon>
   </button>
+  <button color="primary" ion-button full large icon-right (click)="goToOptions()">
+    Opções
+    <ion-icon name="options"></ion-icon>
+  </button>
   <button color="primary" ion-button full large icon-right (click)="goToConfig()">
     Configurações
     <ion-icon name="settings"></ion-icon>
